Set interval to updat position text

--- a/index_iss.html
+++ b/index_iss.html
@@ -30,7 +30,7 @@
         document.getElementById('lon').textContent = longitude;
     }
 
-    getISS();
+    setInterval(getISS, 5000);
 </script>
 
 </html>
