--- a/index_iss.html
+++ b/index_iss.html
@@ -31,11 +31,20 @@
 <!-- Make sure you put this AFTER Leaflet's CSS -->
 <script>
 
-    const mymap = L.map('issMap').setView([0, 0], 2);
+    const mymap = L.map('issMap').setView([0, 0], 3);
     const attribution =  '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors';
-    const marker = L.marker([0, 0]).addTo(mymap);
     const tileURL = 'https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png';
     const tiles = L.tileLayer( tileURL, { attribution });
+    var myIcon = L.icon({
+                        iconUrl: 'International_Space_Station.svg',
+                        iconSize: [38, 95],
+                        iconAnchor: [22, 94],
+                        popupAnchor: [-3, -76],
+                        shadowUrl: 'my-icon-shadow.png',
+                        shadowSize: [68, 95],
+                        shadowAnchor: [22, 94]
+                    });
+    const marker = L.marker([0, 0], {icon: myIcon}).addTo(mymap);
 
     tiles.addTo(mymap);
 
@@ -48,16 +57,17 @@
         const data = await response.json();
         const { latitude, longitude } = data;
 
-        document.getElementById('lat').textContent = latitude;
-        document.getElementById('lon').textContent = longitude;
+        document.getElementById('lat').textContent = latitude.toFixed(2);
+        document.getElementById('lon').textContent = longitude.toFixed(2);
 
         marker.setLatLng([latitude, longitude]);
+        mymap.setView([latitude, longitude]);
         
     }
 
-    setInterval(getISS, 5000);
+    getISS();
 
-    
+    setInterval(getISS, 5000);
 
 </script>
 
